samples/bookmap/invalid/R1.dita
<?xml version="1.0" encoding="UTF-8"?>
<topic id="r1_invalid">
  <title>Not a Bookmap</title>
</topic>